--- a/tzlshop/Public/Admin/Styles/main.css
+++ b/tzlshop/Public/Admin/Styles/main.css
@@ -851,3 +851,6 @@ em, cite, th {
 .cloud_close a{}
 .cloud_close img{ position:absolute; right:10px; top:8px; border:none}
 .Start315{border: 1px solid #CC0000; background: #ffffcc; padding: 10px; margin-bottom: 5px;}
+
+.page a{padding: 5px;border:1px solid #0F0;margin: 5px;}
+.page .current{padding: 5px;background-color:#0f0;color:#fff;}
